Clean libhts.a between wheels and simplify URL
Add before-build command to clean htslib/*.o and libhts.a before building
each wheel, as these are in the source directory and would otherwise be
reused (possibly for a different architecture!). Eventually we will
configure htslib out-of-tree within build_temp or perhaps build_platlib,
i.e., under build/, and will be able to remove this as build/ is known
to the Python infrastructure and automatically managed.

Simplify documentation URL, as we have switched our RTD default from
latest to stable.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dynamic = [
 ]
 
 [project.urls]
-"Documentation" = "https://pysam.readthedocs.io/en/stable/"
+"Documentation" = "https://pysam.readthedocs.io/"
 "Release notes" = "https://pysam.readthedocs.io/en/stable/release.html"
 
 [build-system]
@@ -23,6 +23,8 @@ build-backend = "setuptools.build_meta:__legacy__"
 
 [tool.cibuildwheel]
 before-all = "{project}/devtools/install-prerequisites.sh"
+# Necessary until we build libhts.a out-of-tree from within build_temp
+before-build = "make -C {project}/htslib distclean"
 
 test-requires = ["pytest"]
 test-command = "REF_PATH=: pytest {project}/tests"
