Update actions to use Python 3.12 final and latest actions/checkout

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, macos]
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12.0-rc.1']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
         exclude:
           # Run only the latest few 3.x versions on macOS
           - os: macos
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Checkout pysam
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -71,7 +71,7 @@ jobs:
 
     steps:
       - name: Checkout pysam
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -132,7 +132,7 @@ jobs:
 
     steps:
       - name: Checkout pysam
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - uses: conda-incubator/setup-miniconda@v2
         with:
