--- a/htslib/config.h.in
+++ b/htslib/config.h.in
@@ -147,6 +147,9 @@
 # define _DARWIN_USE_64_BIT_INODE 1
 #endif
 
+/* Enable default extensions. */
+#undef _DEFAULT_SOURCE
+
 /* Number of bits in a file offset, on hosts where this is settable. */
 #undef _FILE_OFFSET_BITS
 
