--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -74,7 +74,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -110,7 +110,7 @@ jobs:
 
       - name: Upload sdist tarball
         if:   runner.os == 'Linux'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: sdist
           path: dist/pysam-*.tar.gz
@@ -123,10 +123,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu]
-        python-version: ['3.7']
+        python-version: ['3.10']
     defaults:
       run:
-        shell: bash -l {0}  # needed for conda activation
+        shell: bash -el {0}  # needed for conda activation
     env:
       HTSLIB_CONFIGURE_OPTIONS: "--disable-libcurl"
 
@@ -134,17 +134,14 @@ jobs:
       - name: Checkout pysam
         uses: actions/checkout@v4
 
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          channel-priority: strict
-          activate-environment: testenv
-          auto-activate-base: false
-          use-only-tar-bz2: true
-
       - name: Set up Conda and Python ${{ matrix.python-version }}
-        run: |
-          conda config --add channels bioconda --add channels conda-forge
-          conda install python=${{ matrix.python-version }} cython
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          channels: conda-forge,bioconda
+          channel-priority: strict
+          python-version: ${{ matrix.python-version }}
+          environment-file: devtools/environment-dev.yaml
+          auto-activate-base: false
 
       - name: Build (directly from checkout)
         run:  python setup.py install
