--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,36 +47,33 @@ jobs:
           path: wheelhouse/*.whl
 
   build_sdist:
-    runs-on: ${{ matrix.os }}-latest
-    strategy:
-      matrix:
-        os: [ubuntu, macos]
-        python-version: [3.9]
+    runs-on: ubuntu-latest
+    env:
+      job_python_version: "3.10"
 
     steps:
       - name: Checkout pysam
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ env.job_python_version }}
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ env.job_python_version }}
 
       - name: Install prerequisite Python libraries
-        run:  pip install cython pytest pytest-pep8
+        run:  pip install cython
 
       - name: Install build prerequisites
-        if:   runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install -q --no-install-recommends --no-install-suggests libcurl4-openssl-dev
 
       - name: Create source distribution
-        run:  python setup.py sdist
+        run:  python setup.py sdist --owner=root --group=root
 
       - uses: actions/upload-artifact@v3
         with:
-          path: dist/*.tar.gz
+          path: dist/pysam-*.tar.gz
 
   upload_pypi:
     needs: [build_wheels, build_sdist]
