Increase test data creation idempotency
Use --force arguments for tabix and bcftools index to rebuild indexes
even if they already exist rather than failing. This should not occur
anyway as the Makefile rules will avoid rebuilding if the target is
already up-to-date -- other than in the courageous scenario of parallel
test running in which multiple makes may be running simultaneously.

There are still likely race conditions in such scenarios, and it would be
sensible to avoid them entirely by pre-creating the test data sequentially
by running `make -C tests/tabix_data` et al outside any parallelisation.

--- a/tests/cbcf_data/Makefile
+++ b/tests/cbcf_data/Makefile
@@ -11,12 +11,12 @@ all.stamp: $(VCFGZ) $(BCF)
 
 %.vcf.gz: %.vcf
 	bgzip < $< > $@
-	tabix -p vcf $@    # create tbi index
-	bcftools index $@  # create csi index
+	tabix -f -p vcf $@    # create tbi index
+	bcftools index -f $@  # create csi index
 
 %.bcf: %.vcf.gz
 	bcftools view -O b $< -o $@
-	bcftools index $@
+	bcftools index -f $@
 
 example_empty.bcf: example_empty.vcf.gz
 	touch $@
