--- a/tests/pysam_data/Makefile
+++ b/tests/pysam_data/Makefile
@@ -101,7 +101,7 @@ explicit_index.cram: ex1.cram
 
 clean:
 	rm -fr [A-Za-z]*.bam *.bai *.csi *.fai *.gzi *.pileup* [A-Za-z]*.cram *.crai \
-	all.stamp *~ calDepth *.dSYM pysam_*.sam \
+	all.lock all.stamp *~ calDepth *.dSYM pysam_*.sam \
 	ex2.sam ex2.sam.gz ex1.sam ex1.fa.gz \
 	with_md.sam.gz \
 	*.fq.gz
