--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,15 +11,15 @@ build_wheels_task:
         - name: Build ARM Linux py3.6-9 wheels
           env:
             CIBW_BUILD: "cp36-* cp37-* cp38-* cp39-*"
-        - name: Build ARM Linux py3.10-12 wheels
+        - name: Build ARM Linux py3.10-13 wheels
           env:
-            CIBW_BUILD: "cp310-* cp311-* cp312-*"
+            CIBW_BUILD: "cp310-* cp311-* cp312-* cp313-*"
 
     - name: Build ARM macOS wheels
       macos_instance:
         image: ghcr.io/cirruslabs/macos-sonoma-base:latest
       env:
-        CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-*"
+        CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-* cp313-*"
 
   alias: build_wheels
 
@@ -32,11 +32,14 @@ build_wheels_task:
     CIBW_SKIP: "*-musllinux_*"
     CIBW_BUILD_VERBOSITY: 1
 
+    # Avoid linking with non-system library libdeflate.dylib
+    CIBW_ENVIRONMENT_MACOS: HTSLIB_CONFIGURE_OPTIONS="--without-libdeflate"
+
     CIBW_MANYLINUX_AARCH64_IMAGE: manylinux_2_28
 
   install_script: |
     python3 -m venv $VENV
-    pip3 install cibuildwheel==2.17.0
+    pip3 install cibuildwheel==2.22.0
 
   build_script: |
     cibuildwheel
