Install mypy on direct CI jobs to run new tests
Also remove pytest-pep8 as it is obsolete and these CI jobs were not
in fact running pep8 linting anyway.

Make importing Literal compatible with Python 3.7 in pysam/libctabix.pyi
similarly to other pysam/*.pyi files.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install prerequisite Python libraries
-        run:  pip install cython pytest pytest-pep8 setuptools
+        run:  pip install cython mypy pytest setuptools
 
       - name: Install Linux build prerequisites
         if:   runner.os == 'Linux'
@@ -79,7 +79,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install prerequisite Python libraries
-        run:  pip install cython pytest pytest-pep8
+        run:  pip install cython pytest
 
       - name: Install build prerequisites
         if:   runner.os == 'Linux'
