--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,15 +8,15 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, macos]
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
         exclude:
           # Run only the latest few 3.x versions on macOS
-          - os: macos
-            python-version: 3.7
           - os: macos
             python-version: 3.8
           - os: macos
             python-version: 3.9
+          - os: macos
+            python-version: 3.10
 
     steps:
       - name: Checkout pysam
@@ -34,7 +34,7 @@ jobs:
         if:   runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -q --no-install-recommends --no-install-suggests libcurl4-openssl-dev
+          sudo apt-get install -q --no-install-recommends --no-install-suggests libbz2-dev libcurl4-openssl-dev liblzma-dev
 
       - name: Update macOS build prerequisites
         if:   runner.os == 'macOS'
@@ -85,7 +85,7 @@ jobs:
         if:   runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -q --no-install-recommends --no-install-suggests libcurl4-openssl-dev
+          sudo apt-get install -q --no-install-recommends --no-install-suggests libbz2-dev libcurl4-openssl-dev liblzma-dev
 
       - name: Create source distribution
         run:  python setup.py sdist --owner=root --group=root
