Remove obsolete build and maintenance scripts
We no longer use Travis CI, the Conda recipe is maintained at Bioconda,
and wheel building is handled via GitHub Actions and Cirrus CI.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 # Omit these files from GitHub's generated tarballs
+/.cirrus.yml                export-ignore
 /.git*                      export-ignore
 /.readthedocs.yaml          export-ignore
-/.travis.disabled.yml       export-ignore
 
 # Omit imported C files from GitHub's language statistics
 htslib/**                   linguist-vendored
