Backport htslib fix: configure checks for broken SIMD intrinsics
Apply PR samtools/htslib#1886. GCC 4.8.5 and earlier accept SSSE3
intrinsics with -mssse3; these compiler versions also accept
__attribute__((target("ssse3"))) but the attribute fails to enable
compilation of the intrinsics.

--- a/htslib/config.h.in
+++ b/htslib/config.h.in
@@ -22,8 +22,8 @@
 /* Define if __attribute__((constructor)) is available. */
 #undef HAVE_ATTRIBUTE_CONSTRUCTOR
 
-/* Define if __attribute__((target(...))) is available. */
-#undef HAVE_ATTRIBUTE_TARGET
+/* Define if __attribute__((target("ssse3"))) works. */
+#undef HAVE_ATTRIBUTE_TARGET_SSSE3
 
 /* Defined to 1 if rANS source using AVX2 can be compiled. */
 #undef HAVE_AVX2
