--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,16 @@ jobs:
         exclude:
           - os: ubuntu
             python-version: '3.7'
+          - os: ubuntu
+            python-version: '3.8'
+          - os: ubuntu
+            python-version: '3.9'
+          - os: ubuntu
+            python-version: '3.10'
+          - os: ubuntu
+            python-version: '3.11'
+          - os: ubuntu
+            python-version: '3.12'
           # Run only the latest few 3.x versions on macOS
           - os: macos
             python-version: '3.7'
@@ -133,59 +143,7 @@ jobs:
           pytest
 
 
-  sdist:
-    runs-on: ${{ matrix.os }}-latest
-    strategy:
-      matrix:
-        os: [ubuntu]
-        python-version: ['3.10']
-
-    steps:
-      - name: Checkout pysam
-        uses: actions/checkout@v4
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install prerequisite Python libraries
-        run:  pip install cython pytest pytest-pep8
-
-      - name: Install build prerequisites
-        if:   runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -q --no-install-recommends --no-install-suggests libcurl4-openssl-dev
-
-      - name: Create source distribution
-        run:  python setup.py sdist --owner=root --group=root
-
-      - name: Build (via sdist tarball)
-        run:  pip install --verbose --no-deps --no-binary=':all:' pysam-*.tar.gz
-        working-directory: dist
-
-      - name: Install test prerequisites
-        run: |
-          case $RUNNER_OS in
-          Linux)
-              sudo apt-get install -q --no-install-recommends --no-install-suggests samtools bcftools tabix
-              ;;
-          macOS)
-              brew install -q samtools bcftools
-              ;;
-          esac
-
-      - name: Run tests
-        run:  REF_PATH=':' pytest
-
-      - name: Upload sdist tarball
-        if:   runner.os == 'Linux'
-        uses: actions/upload-artifact@v3
-        with:
-          name: sdist
-          path: dist/pysam-*.tar.gz
-          retention-days: 14
+  
 
 
   
