Drop Python 3.6 and 3.7 wheels
These Python versions have been EOL for 3.5 and 2 years respectively.

We won't drop Python 3.6/3.7 source compatibility for this point release
but nonetheless we'll set requires-python >=3.8. This probably best serves
most Python 3.6/3.7 users who will prefer pip to give them the last wheel
that was prebuilt rather than build this point-release from source.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,12 +8,15 @@ build_wheels_task:
         architecture: arm64
         platform: linux
       matrix:
-        - name: Build ARM Linux py3.6-9 wheels
+        - name: Build ARM Linux py3.8-9 wheels
           env:
-            CIBW_BUILD: "cp36-* cp37-* cp38-* cp39-*"
-        - name: Build ARM Linux py3.10-13 wheels
+            CIBW_BUILD: "cp38-* cp39-*"
+        - name: Build ARM Linux py3.10-11 wheels
           env:
-            CIBW_BUILD: "cp310-* cp311-* cp312-* cp313-*"
+            CIBW_BUILD: "cp310-* cp311-*"
+        - name: Build ARM Linux py3.12-13 wheels
+          env:
+            CIBW_BUILD: "cp312-* cp313-*"
 
     - name: Build ARM macOS wheels
       macos_instance:
