--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,10 +31,9 @@ jobs:
         run:  devtools/check-platform.sh ${{ matrix.os }}
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.22.0
+        uses: pypa/cibuildwheel@v2.23.3
         env:
           CIBW_BUILD: ${{ matrix.build }}
-          CIBW_SKIP: "*-musllinux_*"
           CIBW_BUILD_VERBOSITY: 1
 
           # Avoid linking with non-system library libdeflate.dylib
@@ -46,6 +45,7 @@ jobs:
           CIBW_MANYLINUX_X86_64_IMAGE:  ${{ matrix.x64image }}
           CIBW_MANYLINUX_I686_IMAGE:    manylinux2014
           CIBW_MANYLINUX_AARCH64_IMAGE: manylinux_2_28
+          CIBW_MUSLLINUX_X86_64_IMAGE:  musllinux_1_2
 
       - name: Check wheelhouse
         run:  devtools/artifactname.py wheelhouse/*.whl >> $GITHUB_ENV
