Ensure -I./htslib takes priority over /usr/local/include
We need to search /usr/local/include to find curl/curl.h etc.
However it needs to be searched AFTER ./htslib et al so that pysam
is compiled against headers from ./htslib/htslib/*.h rather than
any system-installed HTSlib headers in /usr/local/include.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,7 +8,7 @@ freebsd_ci_task:
     pkg install -y bcftools gmake py311-cython3 py311-mypy py311-pytest samtools
 
   env:
-    CC: "clang -I/usr/local/include"
+    CC: "clang -isystem /usr/local/include"
     MAKE: "gmake"
     REF_PATH: ":"
 
