Import upstream htslib/samtools 1.22.1
For each package:

rm -rf htslib;   python3 devtools/import.py htslib   .../htslib-1.22.1
rm -rf samtools; python3 devtools/import.py samtools .../samtools-1.22.1

Take care to preserve removing the regeneration of htscodecs.mk
from htslib/Makefile.

--- a/htslib/configure.ac
+++ b/htslib/configure.ac
@@ -645,7 +645,7 @@ AS_IF([test "x$enable_ref_cache" != xno],
   [AS_CASE([$PLATFORM],
      [Darwin | default],[
         AS_IF([test "x$libcurl" = xenabled], [ref_cache="enabled"], [
-          AS_IF([test "x$enable_ref_cache" = check], [
+          AS_IF([test "x$enable_ref_cache" = xcheck], [
             AC_MSG_WARN([ref-cache not enabled: requires libcurl])
           ],[
             MSG_ERROR([ref-cache not enabled
