feat: add IteratorColumnRecords for building pileups from AlignedSegments
Add new IteratorColumnRecords class that generates pileup columns from a
collection of AlignedSegment objects using htslib's push-based pileup API
(bam_plp_push/bam_plp64_next).

Key features:
- Accepts any iterable of AlignedSegments (requires coordinate-sorted order)
- Supports optional reference sequence (fastafile parameter)
- Includes add_reference(), has_reference(), and seq_len property
- Configurable min_base_quality parameter
- Uses 64-bit position types (hts_pos_t) for extended chromosome support

Implementation notes:
- Uses bam_plp_push/bam_plp64_next instead of callback-based approach
- Records consumed during initialization for push-based API
- Includes required NULL push to signal end-of-input
- Leverages 64-bit APIs (bam_plp64_next, faidx_fetch_seq64) from PR #1362
- Uses opaque bam_plp_s struct (no direct field access needed)

Testing:
- 12 new tests covering reference support, edge cases, and parameters
- Documented known limitation: minor depth differences vs samtools mpileup
  due to push-based vs pull-based filtering differences

Changes:
- Add IteratorColumnRecords class in pysam/libcalignmentfile.pyx
- Update to use 64-bit pileup APIs (bam_plp64_next, faidx_fetch_seq64)
- Add type stub in pysam/libcalignmentfile.pyi
- Add parameterized to test dependencies for parameterized tests
- Update CI workflows to install parameterized package

Closes https://github.com/pysam-developers/pysam/issues/1352

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,6 +6,7 @@ freebsd_ci_task:
 
   install_script: |
     pkg install -y bcftools gmake py311-cython3 py311-mypy py311-pytest samtools
+    pip install parameterized
 
   env:
     CC: "clang -isystem /usr/local/include"
