--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,7 @@ freebsd_ci_task:
   name: CI / FreeBSD
 
   freebsd_instance:
-    image_family: freebsd-14-2
+    image_family: freebsd-15-0-amd64-ufs
 
   install_script: |
     pkg install -y bcftools gmake py311-cython3 py311-mypy py311-pytest samtools
